[package]
name = "shroud"
version = "0.2.2"
edition = "2021"
description = "Universal library for discovering rendering functions of render engines: DirectX9, DirectX10, DirectX11, DirectX12"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ohchase/shroud"
homepage = "https://github.com/ohchase/shroud"
documentation = "https://docs.rs/crate/shroud/latest"
keywords = ["directx", "hacking", "games", "hook"]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",

    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",

    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
] }
thiserror = "1.0.37"

strum = "0.24.1"
strum_macros = "0.24.3"

[features]
default = ["directx9", "directx10", "directx11", "directx12"]

directx9 = ["windows/Win32_Graphics_Direct3D9"]
directx10 = []
directx11 = ["windows/Win32_Graphics_Direct3D11"]
directx12 = ["windows/Win32_Graphics_Direct3D12"]

[package.metadata.docs.rs]
features = ["directx9", "directx10", "directx11", "directx12"]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
